# scanmem

./: AUTHORS  CMakeLists.txt
gui/: GameConqueror.py  GameConqueror.ui  misc.py
libscanmem/: CMakeLists.txt  commands.c  endianness.h  getline.h  handlers.c  main.c  maps.h  menu.c  ptrace.c  scanmem.c  scanmem.h  scanroutines.c  scanroutines.h  show_message.c  show_message.h  targetmem.h
scanmm/: scanmm.cc  scanmm.hh  scanroutines.cc  scanroutines.hh  sets.cc  sets.hh  value.cc  value.hh
test/: CMakeLists.txt
test/hackme/: CMakeLists.txt
test/memfake/: CMakeLists.txt  main.cc
